Relicé nuevas modificaciones

--- a/estilos.css
+++ b/estilos.css
@@ -68,4 +68,4 @@ form {display: block;
         border:3PX #333333 solid;
         width: 96%;
         }
-
+article{justify-content: space-between}
